# r2ox

./: Cargo.toml  build.rs  limine.cfg
.cargo/: config.toml  linker.ld  linker_multiboot.ld  run.sh  runner.sh
core/: Cargo.toml
core/src/: lib.rs  serial.rs  vga.rs
core/src/arch/: mod.rs
core/src/arch/x86_64/: cpu.rs  gdt.rs  interrupts.rs  mod.rs
core/src/graphics/: framebuffer.rs
core/src/memory/: allocator.rs  mod.rs  traits.rs
core/src/memory/pager/: index.rs  mod.rs  paging.rs
r2ox/: Cargo.toml  build.rs
r2ox/src/: main.rs
r2ox/src/asm/: x86_64-boot.asm
r2proc/: Cargo.toml
r2proc/src/: lib.rs
src/: lib.rs  logging.rs  main.rs  vga.rs
src/arch/x86_64/: gdt.rs  interrupts.rs
src/graphics/: framebuffer.rs
